# Chess-Position-to-Lichess

./: pyproject.toml
paul_chess_pos_lichess/: main.py
